--- a/gradle/android-library.gradle
+++ b/gradle/android-library.gradle
@@ -21,3 +21,8 @@ android {
         compose = true
     }
 }
+
+dependencies {
+    implementation(platform(libs.androidx.compose.bom))
+    implementation(libs.androidx.ui)
+}
