--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ koin = "4.0.4"
 jetbrainsKotlinJvm = "2.0.21"
 navigationRuntimeAndroid = "2.9.0"
 fragmentKtx = "1.8.8"
+material3Android = "1.3.2"
 
 
 [libraries]
@@ -35,6 +36,7 @@ koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-navigation-runtime-android = { group = "androidx.navigation", name = "navigation-runtime-android", version.ref = "navigationRuntimeAndroid" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
